<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="com.example.gompare.gomparev1.LoginPage">


    <TextView
        android:text="@string/gompare"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo2"
        android:id="@+id/imageView2"
        tools:ignore="ContentDescription"
        android:layout_marginTop="12dp"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/loginUsername"
        android:hint="@string/username"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/imageView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType=""
        android:ems="10"
        android:id="@+id/loginPassword"
        android:hint="@string/password"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="48dp"
        android:layout_alignTop="@+id/loginUsername"
        android:layout_alignStart="@+id/loginUsername" />

    <Button
        android:text="@string/login"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/loginPassword"
        android:layout_alignStart="@+id/loginPassword"
        android:layout_marginTop="48dp"
        android:id="@+id/LoginButton"
        android:layout_alignEnd="@+id/loginPassword"
        android:onClick="userLogin"/>

    <Button
        android:text="@string/browse_as_guest"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:id="@+id/BrowseAsGuestButton"
        android:layout_below="@+id/LoginButton"
        android:layout_alignStart="@+id/LoginButton"
        android:layout_alignEnd="@+id/LoginButton" />

    <TextView
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RegisterLink"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_marginEnd="26dp" />


</RelativeLayout>
